# aureum-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  aureum.wasm  build-docker.sh
src/: lib.rs  test_data.rs
