[package]
name = "aureum"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cardano-multiplatform-lib = "6.0.1"
cml-core = "6.0.1"
cml-chain = "6.0.1"
cml-crypto = "6.0.1"
uplc = "1.1.7"
dlmalloc = "0.2.7"
wee_alloc = "0.4.5"
getrandom = { version = "0.2.15", default-features = false }
bincode = "1.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_cbor = "0.11.2"
thiserror = "2.0.3"
hex = "0.4.3"
itertools = "0.13.0"                                         # or latest version
pallas-codec = "0.31.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
